--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ nav::-webkit-scrollbar-thumb {
     border-radius: 10px;
 }
 
-.menC {
+.menC,
+.womenC {
     display: none;
     justify-content: space-between;
     align-items: center;
@@ -159,12 +160,12 @@ nav::-webkit-scrollbar-thumb {
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.35);
 }
 
-p {
-      display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;  
-  overflow: hidden;
-  text-overflow: ellipsis;
+p, h1 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;  
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .add-to-cart-btn {
