--- a/cart/cart-style.css
+++ b/cart/cart-style.css
@@ -4,4 +4,14 @@ body {
   background: linear-gradient(135deg, #2c3e50, #4ca1af);
   color: #eee;
   min-height: 100vh;
+  overflow: hidden;
+}
+
+.menC,
+.womanC,
+.electronics,
+.jewelery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
