--- a/main/style.css
+++ b/main/style.css
@@ -23,6 +23,39 @@ body {
     color: hsl(205, 49%, 38%);
 }
 
+.userImg {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.username-img {
+    display: flex;
+    width: 30vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexSpan {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.userName {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  color: #00bfff;
+  display: inline-block;
+  transition: transform 0.2s ease;
+    margin-left: 3vh;
+}
+
+.userName:hover {
+  transform: scale(1.01); 
+}
+
 .header-container {
     display: flex;
     justify-content: space-between;
@@ -49,7 +82,7 @@ body {
 
 .storeCart {
     margin-top: 5vh;
-    margin-right: 15vh;
+    margin-left: 120vh;
 }
 
 .storeCart img {
@@ -71,10 +104,10 @@ body {
 /* animation keyFrame */
 @keyframes slideRight {
   from {
-    transform: translateX(0);
+    transform: rotate(0deg);
   }
   to {
-    transform: translateX(31vw);
+    transform: rotate(360deg);
   }
 }
 
@@ -84,8 +117,8 @@ body {
     align-items: center;
     width: 10vh;
     height: 10vh;
-    margin-top: 3vh;
-    margin-left: 40vh;
+    /* margin-top: 3vh;
+    margin-left: 70vh; */
 }
 
 /* main section */
@@ -102,6 +135,10 @@ body {
 .box {
     width: 30vh;
     margin: 2vh;
+}
+
+.flexBoxForAnimation {
+    display: flex;
 }
 
 /* вибраний елемент */
@@ -176,7 +213,7 @@ nav ul {
 }
 
 nav ul li {
-    font-size: 2vh;
+    font-size: 1.2rem;
     color: #fff;
     list-style: none;
     padding: 1.5vh 2vh;
@@ -226,7 +263,7 @@ nav::-webkit-scrollbar-thumb {
 p, h1 {
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;  
+    -webkit-line-clamp: 1;  
     overflow: hidden;
     text-overflow: ellipsis;
 }
