--- a/main/style.css
+++ b/main/style.css
@@ -4,10 +4,10 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: linear-gradient(135deg, #ff7e5f, #feb47b); /* теплий помаранчево-жовтий градієнт */
   color: #fff; /* білий текст для контрасту */
-  min-height: 100vh;
+  min-height: 98vh;
   box-sizing: border-box;
   text-shadow: 0 1px 3px rgba(0,0,0,0.4);
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 /* header section*/
@@ -126,7 +126,7 @@ body {
 .products-container {
     display: flex;
     margin: 3vh;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 
 /* animated "select-menu" styles */
@@ -410,3 +410,63 @@ button:hover {
   transform: scale(0.6);
 }
 
+.avatarDiv {
+    display: flex;
+}
+
+
+
+
+/* Footer */
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 12vh;
+    background: linear-gradient(135deg, #e67350, #d95d39); /* темніший градієнт під твій фон */
+    color: #fff;
+    /* padding: 30px 0 15px; */
+    box-shadow: 0 -2px 6px rgba(0,0,0,0.2);
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.footer-section h3 {
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: #00bfff; /* акцентний колір */
+}
+
+.footer-section p,
+.footer-section a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.footer-section a:hover {
+  color: #00bfff;
+}
+
+.social-links {
+  display: flex;
+  gap: 15px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-links li img {
+  width: 24px;
+  height: 24px;
+  transition: transform 0.3s;
+}
+
+.social-links li img:hover {
+  transform: scale(1.2);
+}
