--- a/main/style.css
+++ b/main/style.css
@@ -461,6 +461,7 @@ button:hover {
 display: none;
     flex-direction: column;
   width: 10vw;
+  height: 13vh;
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
@@ -492,7 +493,7 @@ display: none;
   border: 2px solid #eee;
 }
 
-.profile-header .username {
+.profile-header .user-small-section-name {
   font-weight: bold;
   font-size: 1rem;
   color: #333;
